--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&family=Montserrat:wght@200;300;400;500;600;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@100;200;300;500;600;700;800&display=swap');
+
 :root {
+  --primaryGreen : #22c55e;
   --primaryBlue : #0ea5e9;
   --primaryOrange : #ff8a00;
   --secondaryGreen : #5eead4;
+  --secondaryBlue : #E2F8FF;
+  --secondaryOrange : #fff6e4;
+  --blackColor : #2c2c2c;
+  --gray : #9c9c9c;
 }
