--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,9 @@
   --secondaryOrange : #fff6e4;
   --blackColor : #2c2c2c;
   --gray : #9c9c9c;
+  --Poppins : 'Poppins';
+}
+
+* {
+  font-family: 'Poppins', sans-serif;
 }
