--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,11 @@
   gap: 10px;
   height: 45px;
   border: none;
-  background: var(--secondaryBlue);
+  background: var(--primaryBlue);
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--primaryOrange);
+  color: white;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
