--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,9 @@
 }
 .nav-link.active::before{
   content: '';
-  width: 30px;
+  width: 70%;
   height: 2px;
+  background: var(--primaryBlue);
 }
 .nav-link.active{
   color: var(--primaryBlue) !important;
