--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,19 @@
   --montserrat: "Montserrat", sans-serif;
   --sans: "PT Sans", sans-serif;
   --inter: "Inter", sans-serif;
+  --shadow: 0px 6px 10px rgba(129, 129, 129, 0.1);
 }
 
 * {
   font-family: var(--poppins);
+}
+body {
+  background-color: #fafbfc !important;
+}
+.navbar {
+  padding: 10px 0;
+  background-color: white !important;
+  box-shadow: var(--shadow);
 }
 
 .primaryBtn {
@@ -32,7 +41,13 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
+
 .secondaryBtn {
   padding: 12px 24px;
   gap: 10px;
@@ -46,8 +61,40 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
+  min-width: 100px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.9s linear;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
+.primaryBtnStyle {
+  background: #00c2ff;
+  background: linear-gradient(0deg, #00c2ff 0%, #00c2ff 100%);
+  border: none;
+}
+
+.secondaryBtnStyle {
+  background: #e2f8ff;
+  background: linear-gradient(0deg, #e2f8ff 0%, #e2f8ff 100%);
+  border: none;
+}
+
+.primaryBtnStyle:before,
+.secondaryBtnStyle:before {
+  height: 0%;
+  width: 2px;
+}
+
+.primaryBtnStyle:hover,
+.secondaryBtnStyle:hover {
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.5), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.2), inset 4px 4px 6px 0 rgba(0, 0, 0, 0.4);
+}
+
+.btnWrapper {
+  gap: 12px;
+}
 .btnIcon {
   border: none;
   background-color: transparent;
@@ -59,13 +106,55 @@
   border-radius: 50%;
   background-color: var(--primaryBlue);
 }
-.nav-link.active::before{
-  content: '';
-  width: 70%;
-  height: 2px;
-  background: var(--primaryBlue);
-}
-.nav-link.active{
+.nav-link.active {
   color: var(--primaryBlue) !important;
   font-weight: 600 !important;
+  position: relative;
+}
+.nav-link.active::before {
+  content: "";
+  width: 60%;
+  height: 2px;
+  background: var(--primaryBlue);
+  position: absolute;
+  bottom: 6px;
+  left: 8px;
+}
+.nav-link {
+  position: relative;
+}
+.nav-link::before {
+  content: "";
+  width: 0;
+  height: 2px;
+  background: var(--primaryBlue);
+  position: absolute;
+  bottom: 6px;
+  left: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-link:hover::before {
+  content: "";
+  width: 60%;
+  height: 2px;
+  background: var(--primaryBlue);
+  position: absolute;
+  bottom: 6px;
+  left: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 992px) {
+  .nav-link:hover::before {
+    width: 10%;
+    position: absolute;
+    bottom: 6px;
+    left: 0px;
+  }
+
+  .nav-link.active::before {
+    width: 8%;
+    left: 0px;
+  }
 }
