--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,11 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.carousel-control-next i, 
+.carousel-control-prev i {
+  font-size: 40px;
+}
+
 @media screen and (max-width: 992px) {
   .nav-link:hover::before {
     width: 10%;
