--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,11 @@ body {
 
 .carousel-control-next i, 
 .carousel-control-prev i {
-  font-size: 40px;
+  font-size: 30px;
+}
+
+#carouselExampleIndicators {
+  margin-top: 65px;
 }
 
 @media screen and (max-width: 992px) {
