--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --secondaryGreen: #5eead4;
   --secondaryBlue: #e2f8ff;
   --secondaryOrange: #fff6e4;
+  --whiteColor: #ffffff;
   --blackColor: #2c2c2c;
   --gray: #9c9c9c;
   --poppins: "Poppins", sans-serif;
