--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,21 @@
   --whiteColor: #ffffff;
   --blackColor: #2c2c2c;
   --gray: #9c9c9c;
+  --body: #fafbfc;
   --poppins: "Poppins", sans-serif;
   --montserrat: "Montserrat", sans-serif;
   --sans: "PT Sans", sans-serif;
   --inter: "Inter", sans-serif;
   --shadow: 0px 6px 10px rgba(129, 129, 129, 0.1);
+  --shadowStyle: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5), 7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  --shadowHover: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
 }
 
 * {
   font-family: var(--poppins);
 }
 body {
-  background-color: #fafbfc !important;
+  background-color: var(--body) !important;
   height: 200vh;
 }
 .navbar {
@@ -158,6 +161,7 @@ body {
 
 .title-wrapper {
   background: var(--primaryBlue);
+  background: linear-gradient(0deg,  var(--primaryBlue) 0%, var(--primaryBlue) 100%);
   color: var(--whiteColor);
   display: flex;
   flex-direction: row;
@@ -165,7 +169,7 @@ body {
   padding: 10px 24px 4px 10px;
   gap: 10px;
   width: 177px;
-  box-shadow: var(--shadow);
+  box-shadow: var(--shadowStyle);
   /* position: absolute; */
   /* height: 44px;  */
 }
